Fixed the gaps, widths, and general calculator style

--- a/proyects/calculator/calculator.css
+++ b/proyects/calculator/calculator.css
@@ -179,14 +179,15 @@ footer {
   scrollbar-width: thin;
   scrollbar-color: #415a77 transparent;
   width: 100%;
+  max-width: 248px;
+  flex-wrap: wrap;
   text-align: start;
   font-weight: 600;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.932);
 
-  height: 4rem;
-  max-width: 22rem;
+  height: 8rem;
   grid-area: result;
-  padding: 1.6rem;
+  padding: 1rem;
   border-radius: 1rem;
   background-color: #1b263b;
   color: #ffffff;
@@ -198,13 +199,14 @@ footer {
 .calculator__result-text {
   width: 100%;
   height: fit-content;
+  max-width: 248px;
   font-size: 2.4rem;
   text-align: right;
 }
 
 .calculator__btns {
   cursor: pointer;
-  gap: 0.4rem;
+  gap: 0.7rem;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   grid-area: btns;
   display: grid;
@@ -233,7 +235,7 @@ footer {
   border: 1px solid #0d1b2a;
   color: #ffffff;
 
-  width: 6rem;
+  /* width: 6rem; */
   background-color: #0d1b2a;
   font-size: 2rem;
   display: flex;
@@ -247,6 +249,7 @@ footer {
 
   justify-content: center;
   transition: all 0.2s ease;
+  border-radius: 1rem;
 }
 
 * {
@@ -319,6 +322,7 @@ footer {
 .calculator__btn:nth-child(5) {
   grid-area: delete;
   width: 12rem;
+  border-top-left-radius: 1rem ;
   display: flex;
 
   align-items: center;
@@ -338,6 +342,7 @@ footer {
 }
 .calculator__btn:nth-child(10) {
   grid-area: reset;
+  border-top-right-radius: 1rem;
 
   width: 12rem;
 }
@@ -355,6 +360,7 @@ footer {
 }
 .calculator__btn:nth-child(15) {
   grid-area: zero;
+  border-bottom-left-radius: 1rem;
 }
 .calculator__btn:nth-child(16) {
   grid-area: dot;
@@ -364,6 +370,7 @@ footer {
 }
 .calculator__btn:nth-child(18) {
   grid-area: division;
+  border-bottom-right-radius: 1rem;
 }
 
 @media (min-width: 1024px) {
